После перехода всё работает хорошо

--- a/src/index.hbs
+++ b/src/index.hbs
@@ -12,6 +12,11 @@
 <body>
     {{> views/header }}
 <main>
+    <div class="hungry">
+        <h2 class = "hungry-title"> <b>Hungry?</b> Find your next meal</h2>
+        <button></button>
+        <img class="Ladies" src="img/Ladies.svg" alt="">
+    </div>
     {{> views/carusel }}
 </main>
 </body>
