Переделываю кнопки в ссылки

--- a/src/index.hbs
+++ b/src/index.hbs
@@ -18,6 +18,53 @@
         <img class="Ladies" src="img/Ladies.svg" alt="">
     </div>
     {{> views/carusel }}
+    <div class="AwardWinningBanner">
+        <div class="banner-info">
+            <h2 class="banner-title">Award winning</h2>
+            <h3 class="banner-text">The best restaurants near you!</h3>
+            <button class="btn-banner">Explore the best restaurants</button>
+        </div>
+        <div class="banner-mini-cards">
+            <div class="banner-column-1">
+                <div class="banner-card">
+                    <div><img class="banner-card-img" src="img/banner-img-1.png" alt=""></div>
+                    <div class="banner-card-title">The Smoking Veg</div>
+                </div>
+                <div class="banner-card">
+                    <div><img class="banner-card-img" src="img/banner-img-1.png" alt=""></div>
+                    <div class="banner-card-title">The Smoking Veg</div>
+                </div>
+                <div class="banner-card">
+                    <div><img class="banner-card-img" src="img/banner-img-1.png" alt=""></div>
+                    <div class="banner-card-title">The Smoking Veg</div>
+                </div>
+            </div>
+            <div class="banner-column-2">
+                <div class="banner-card">
+                    <div><img class="banner-card-img" src="img/banner-img-1.png" alt=""></div>
+                    <div class="banner-card-title">The Smoking Veg</div>
+                </div>
+                <div class="banner-card">
+                    <div><img class="banner-card-img" src="img/banner-img-1.png" alt=""></div>
+                    <div class="banner-card-title">The Smoking Veg</div>
+                </div>
+            </div>
+            <div class="banner-column-1">
+                <div class="banner-card">
+                    <div><img class="banner-card-img" src="img/banner-img-1.png" alt=""></div>
+                    <div class="banner-card-title">The Smoking Veg</div>
+                </div>
+                <div class="banner-card">
+                    <div><img class="banner-card-img" src="img/banner-img-1.png" alt=""></div>
+                    <div class="banner-card-title">The Smoking Veg</div>
+                </div>
+                <div class="banner-card">
+                    <div><img class="banner-card-img" src="img/banner-img-1.png" alt=""></div>
+                    <div class="banner-card-title">The Smoking Veg</div>
+                </div>
+            </div>
+        </div>
+    </div>
 </main>
 </body>
 </html>
