--- a/src/views/header.hbs
+++ b/src/views/header.hbs
@@ -1,6 +1,6 @@
 <header class="header container">
   <a href="index.html"><img class="logo" src="img/logo.svg" alt=""></a>
-  <button class = "btn-home">Home</button>
-  <button class = "btn-all-restaurants">All restaurants</button>
-  <button class = "btn-shop"><img class="chop" src="img/shop.svg" alt=""></button>
+  <a href="index.html" class = "header-a btn-home">Home</a>
+  <a href="index.html" class = "header-a btn-all-restaurants">All restaurants</a>
+  <a href="index.html" class="header-a btn-shop"><img class="shop" src="img/shop.svg" alt=""></a>
 </header>
