Перед разделение на файлы

--- a/src/index.hbs
+++ b/src/index.hbs
@@ -14,7 +14,7 @@
 <main>
     <div class="hungry">
         <h2 class = "hungry-title"> <b>Hungry?</b> Find your next meal</h2>
-        <button></button>
+        <a href="index.html"></a>
         <img class="Ladies" src="img/Ladies.svg" alt="">
     </div>
     {{> views/carusel }}
@@ -22,7 +22,7 @@
         <div class="banner-info">
             <h2 class="banner-title">Award winning</h2>
             <h3 class="banner-text">The best restaurants near you!</h3>
-            <button class="btn-banner">Explore the best restaurants</button>
+            <a href="index.html" class="btn-banner">Explore the best restaurants</a>
         </div>
         <div class="banner-mini-cards">
             <div class="banner-column-1">
