--- a/src/style.css
+++ b/src/style.css
@@ -5,7 +5,7 @@ html{
    */
   --font-Montserrat: "Montserrat", sans-serif;
   --font-Hind: "Hind", sans-serif;
-  font: var(--font-Montserrat);
+  font-family: var(--font-Montserrat);
 
 }
 .container {
@@ -30,11 +30,10 @@ header {
   color: inherit; /* Сохраняем цвет текста родительского элемента */
   border: none; /* Убираем рамку */
   cursor: pointer; /* Добавляем указатель мыши в виде руки для кликабельности */
-  /* Выравнивание текста по вертикали */
   text-align: center; /* Выравнивание текста по горизонтали */
   border-radius: 4px;
   background-color: #ffffff;
-  font: var(--font-Hind);
+  font-family: var(--font-Hind);
   line-height: 55px;
   font-weight: 400;
   font-size: 18px;
@@ -71,14 +70,18 @@ header {
   line-height: 56px;
   text-align: center;
   color: #2C2C2C;
-  margin: 0px;
+  margin: 0;
 }
 .main-title b{
   font-weight: 700;
 }
-.hungry button{
-  position: relative;
+.hungry a{
+  display: inline-block; /* Устанавливаем элемент как блочный */
+  text-decoration: none; /* Убираем подчеркивание */
+  border: none; /* Убираем рамку */
+  cursor: pointer; /* Добавляем указатель мыши в виде руки для кликабельности */
   background-color: #202020;
+  position: relative;
   width: 189px;
   height: 56px;
   border-radius: 4px;
@@ -101,6 +104,7 @@ header {
   font-size: 35.16px;
   line-height: 48px;
   margin: 0;
+  letter-spacing: -0.04em;
 }
 .favourite-picks-container{
   display: flex;
@@ -131,6 +135,11 @@ header {
   margin-top: 16px;
 }
 .pick-card-title{
+  text-decoration: none; /* Убираем подчеркивание */
+  color: inherit; /* Сохраняем цвет текста родительского элемента */
+  border: none; /* Убираем рамку */
+  cursor: pointer; /* Добавляем указатель мыши в виде руки для кликабельности */
+  text-align: center; /* Выравнивание текста по горизонтали */
   height: 32px;
   font-weight: 700;
   font-size: 22.5px;
@@ -144,7 +153,7 @@ header {
 .pick-card-review{
   display: flex;
   height: 26px;
-  font: var(--font-Hind);
+  font-family: var(--font-Hind);
   font-weight: 400;
   font-size: 16px;
   line-height: 100%;
@@ -165,7 +174,7 @@ header {
 }
 .pick-card-description{
   height: 29px;
-  font: var(--font-Hind);
+  font-family: var(--font-Hind);
   font-weight: 400;
   font-size: 18px;
   line-height: 100%;
@@ -184,17 +193,20 @@ header {
   align-items: center;
 }
 .btn-category{
+  text-decoration: none; /* Убираем подчеркивание */
+  border: none; /* Убираем рамку */
+  cursor: pointer; /* Добавляем указатель мыши в виде руки для кликабельности */
+  text-align: center; /* Выравнивание текста по горизонтали */
   width: 110px;
   height: 32px;
-  font: var(--font-Hind);
+  font-family: var(--font-Hind);
   font-weight: 400;
   font-size: 16px;
-  line-height: 100%;
+  line-height: 32px;
   letter-spacing: 0;
   background-color: #E9E9E9;
   color: #636363;
   margin: 0;
-  border:none;
 }
 .btn-right{
   position: absolute;
@@ -228,8 +240,9 @@ header {
   font-weight: 900;
   font-size: 43.95px;
   line-height: 56px;
+  letter-spacing: -0.05em;
   width: 539px;
-  height: 168px;
+  height: 260px;
   margin-top: 112px;
 }
 .banner-title{
@@ -240,19 +253,23 @@ header {
   margin: 0;
 }
 .btn-banner{
+  display: inline-block;
+  text-decoration: none; /* Убираем подчеркивание */
+  border: none; /* Убираем рамку */
+  cursor: pointer; /* Добавляем указатель мыши в виде руки для кликабельности */
+  text-align: center; /* Выравнивание текста по горизонтали */
   background-color: #202020;
   color: #FFFFFF;
-  width: 265px;
-  height: 56px;
   margin-top: 40px;
   border-radius: 4px;
-  padding: 8px 24px;
   gap: 10px;
-  font: var(--font-Hind);
+  font-family: var(--font-Hind);
   font-weight: 400;
   font-size: 18px;
-  line-height: 100%;
+  line-height: 56px;
   letter-spacing: 0;
+  width: 265px;
+  height: 56px;
 }
 .banner-mini-cards{
   display: flex;
@@ -299,7 +316,7 @@ header {
   width: 135px;
   height: 29px;
   margin: 16px 34px;
-  font: var(--font-Hind);
+  font-family: var(--font-Hind);
   font-weight: 400;
   font-size: 18px;
   line-height: 100%;
