--- a/src/index.hbs
+++ b/src/index.hbs
@@ -13,58 +13,12 @@
     {{> views/header }}
 <main>
     <div class="hungry">
-        <h2 class = "hungry-title"> <b>Hungry?</b> Find your next meal</h2>
+        <h2 class = "hungry-title"> <b class="hungry-b">Hungry?</b> Find your next meal</h2>
         <a href="index.html"></a>
         <img class="Ladies" src="img/Ladies.svg" alt="">
     </div>
     {{> views/carusel }}
-    <div class="AwardWinningBanner">
-        <div class="banner-info">
-            <h2 class="banner-title">Award winning</h2>
-            <h3 class="banner-text">The best restaurants near you!</h3>
-            <a href="index.html" class="btn-banner">Explore the best restaurants</a>
-        </div>
-        <div class="banner-mini-cards">
-            <div class="banner-column-1">
-                <div class="banner-card">
-                    <div><img class="banner-card-img" src="img/banner-img-1.png" alt=""></div>
-                    <div class="banner-card-title">The Smoking Veg</div>
-                </div>
-                <div class="banner-card">
-                    <div><img class="banner-card-img" src="img/banner-img-1.png" alt=""></div>
-                    <div class="banner-card-title">The Smoking Veg</div>
-                </div>
-                <div class="banner-card">
-                    <div><img class="banner-card-img" src="img/banner-img-1.png" alt=""></div>
-                    <div class="banner-card-title">The Smoking Veg</div>
-                </div>
-            </div>
-            <div class="banner-column-2">
-                <div class="banner-card">
-                    <div><img class="banner-card-img" src="img/banner-img-1.png" alt=""></div>
-                    <div class="banner-card-title">The Smoking Veg</div>
-                </div>
-                <div class="banner-card">
-                    <div><img class="banner-card-img" src="img/banner-img-1.png" alt=""></div>
-                    <div class="banner-card-title">The Smoking Veg</div>
-                </div>
-            </div>
-            <div class="banner-column-1">
-                <div class="banner-card">
-                    <div><img class="banner-card-img" src="img/banner-img-1.png" alt=""></div>
-                    <div class="banner-card-title">The Smoking Veg</div>
-                </div>
-                <div class="banner-card">
-                    <div><img class="banner-card-img" src="img/banner-img-1.png" alt=""></div>
-                    <div class="banner-card-title">The Smoking Veg</div>
-                </div>
-                <div class="banner-card">
-                    <div><img class="banner-card-img" src="img/banner-img-1.png" alt=""></div>
-                    <div class="banner-card-title">The Smoking Veg</div>
-                </div>
-            </div>
-        </div>
-    </div>
+    {{> views/banner }}
 </main>
 </body>
 </html>
