Осталось только footer

--- a/src/index.hbs
+++ b/src/index.hbs
@@ -17,8 +17,13 @@
         <a href="index.html"></a>
         <img class="Ladies" src="img/Ladies.svg" alt="">
     </div>
-    {{> views/carusel }}
+    {{> views/carusel-favourite-pick }}
     {{> views/banner }}
+    {{> views/carusel-new-arrivals }}
+    {{> views/carusel-categories }}
+    <div class="footer">
+
+    </div>
 </main>
 </body>
 </html>
