главная и категории готовы

--- a/src/index.hbs
+++ b/src/index.hbs
@@ -21,9 +21,7 @@
     {{> views/banner }}
     {{> views/carusel-new-arrivals }}
     {{> views/carusel-categories }}
-    <div class="footer">
-
-    </div>
+    {{> views/footer }}
 </main>
 </body>
 </html>
