--- a/src/views/carusel-categories.hbs
+++ b/src/views/carusel-categories.hbs
@@ -19,4 +19,5 @@
     </div>
     <button class="btn-right btn-cat"><img class="arrow-right" src="img/arrow-right.svg" alt=""></button>
     <button class="btn-left btn-cat"><img class="arrow-left" src="img/arrow-left.svg" alt=""></button>
+    <div class="all-categories"><a href="categories.html" class="btn-all-categories">View all categories</a></div>
 </div>
