--- a/src/style.css
+++ b/src/style.css
@@ -385,8 +385,86 @@ header {
 .btn-cat{
   margin-top: -130px;
 }
+.all-categories{
+  position: absolute;
+  width: 194px;
+  height: 56px;
+  margin-top: -266px;
+  right: 35px;
+  border-radius: 4px;
+  background-color: #FFFFFF;
+  text-align: center;
+}
+.btn-all-categories{
+  display: inline-block; /* Устанавливаем элемент как блочный */
+  text-decoration: none; /* Убираем подчеркивание */
+  border: none; /* Убираем рамку */
+  cursor: pointer; /* Добавляем указатель мыши в виде руки для кликабельности */
+  text-align: center; /* Выравнивание текста по горизонтали */
+  width: 146px;
+  height: 29px;
+  background-color: #FFFFFF;
+  font-family: var(--font-Hind);
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 29px;
+  letter-spacing: 0;
+  color: #202020;
+  margin-top: 13.5px;
+}
 .footer{
+  display: flex;
+  justify-items: center;
   height: 451px;
-background-color: #2C2C2C;
+  background-color: #2C2C2C;
   margin-top: 72px;
+}
+.logo-in-footer{
+  margin: 91px 0 0 209px;
+  width: 120px;
+  height: 105px;
+}
+.footer-block{
+  display: flex;
+  flex-direction: column;
+  margin-top: 48px;
+  margin-left: auto;
+}
+.discover-us{
+  width: 136px;
+  height: 146px;
+}
+.footer-title{
+  font-weight: 700;
+  font-size: 22.5px;
+  line-height: 100%;
+  letter-spacing: 0;
+  color: #FFFFFF;
+  background-color: #2C2C2C;
+  margin: 0;
+  margin-bottom: 8px;
+}
+.footer-link{
+  display: inline-block; /* Устанавливаем элемент как блочный */
+  text-decoration: none; /* Убираем подчеркивание */
+  border: none; /* Убираем рамку */
+  cursor: pointer; /* Добавляем указатель мыши в виде руки для кликабельности */
+  height: 29px;
+  font-family: var(--font-Hind);
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 29px;
+  letter-spacing: 0;
+  margin-top: 8px;
+  background-color: #2C2C2C;
+  color: #FFFFFF;
+}
+.social-media{
+  width: 199px;
+  height: 146px;
+}
+.our-apps{
+  width: 184px;
+  height: 109px;
+  margin-right: 71px;
 }
