Добавил в категорию логотип. Суйчас добавлю реакт

--- a/src/categories.hbs
+++ b/src/categories.hbs
@@ -43,7 +43,7 @@
                 <a href="categories.html" class="categories-section-card-link">Pizza</a>
         </div>
     </div>
-    {{> views/footer }}
+    {{> views/footer logo="logo-in-footer-green.svg"}}
 </main>
 </body>
 </html>
