--- a/src/index.hbs
+++ b/src/index.hbs
@@ -21,7 +21,7 @@
     {{> views/banner }}
     {{> views/carusel-new-arrivals }}
     {{> views/carusel-categories }}
-    {{> views/footer }}
+    {{> views/footer logo="logo-in-footer.svg"}}
 </main>
 </body>
 </html>
