--- a/src/pages/food/style.css
+++ b/src/pages/food/style.css
@@ -8,22 +8,30 @@ html{
     font-family: var(--font-Montserrat);
   
   }
-.topbanner{
-    height: 242;
+.food-top-banner{
+    position: relative;
+    width: 100%;
+    height: 242px;
 }
-.banner-photo{
-    height: 242;
+.food-banner-photo{
+    width: 100%;
+    height: 242px;
+    object-fit: cover;
 }
-.banner-title{
-    width: 112;
-    height: 64;
-    margin-top: -153px;
-    margin-left: auto;
-    margin-right: auto;
+.food-banner-title{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: auto;
+    min-width: 112px;
+    padding: 0 20px;
+    height: 64px;
     font-weight: 700;
     font-size: 43.95px;
     line-height: 64px;
     letter-spacing: -5%;
     text-align: center;
-
+    color: white;
+    z-index: 1;
 }
