--- a/src/pages/restoran/style.css
+++ b/src/pages/restoran/style.css
@@ -1,14 +1,14 @@
-.food-top-banner{
+.restoran-top-banner{
     position: relative;
     width: 100%;
     height: 242px;
 }
-.food-banner-photo{
+.restoran-banner-photo{
     width: 100%;
     height: 242px;
     object-fit: cover;
 }
-.food-banner-title{
+.restoran-banner-title{
     position: absolute;
     top: 50%;
     left: 50%;
