--- a/src/pages/restoran/about/style.css
+++ b/src/pages/restoran/about/style.css
@@ -3,6 +3,7 @@
     height: 249px;
     margin-top: 32px;
     margin-left: 56px;
+    margin-bottom: 48px;
   }
   .restoran-about-block-link{
     margin: 0;
