--- a/src/widgets/Footer/style.css
+++ b/src/widgets/Footer/style.css
@@ -62,4 +62,43 @@
     margin-right: 71px;
   }
 
- 
+  @media (max-width: 1024px) {
+    .footer{
+      height: 800px;
+      flex-direction: column;
+      align-items: center;
+      gap: 32px;
+    }
+    .footer-mr-ziro{
+      margin: 0;
+      flex-direction: column;
+      align-items: center;
+    }
+    .logo-in-footer{
+      margin: 91px 0 0 0;
+      width: 120px;
+      height: 105px;
+    }
+    .footer-block{
+      margin-left: 0;
+    }
+    .discover-us{
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      margin: 0;
+    }
+
+    .social-media{
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      margin: 0;
+    }
+    .our-apps{
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      margin: 0;
+    }
+  }
