--- a/src/pages/home/style.css
+++ b/src/pages/home/style.css
@@ -1,12 +1,16 @@
 .hungry{
   background-color: #B1DDE4;
   padding-top: 131px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 .hungry-title{
   font-weight: 700;
   font-size: 43.95px;
   line-height: 56px;
   text-align: center;
+  letter-spacing: -0.05em;
   color: #2C2C2C;
   margin: 0;
 }
@@ -24,7 +28,15 @@
   height: 56px;
   border-radius: 4px;
   margin-top: 50px;
-  margin-left: 43.9%;
+
+  font-family: var(--font-Hind);
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 56px;
+  letter-spacing: 0;
+  color: white;
+  text-align: center;
+
 }
 .Ladies{
   margin-top: -15px;
@@ -349,4 +361,339 @@
   letter-spacing: 0;
   color: #202020;
   margin-top: 13.5px;
+}
+
+@media (max-width: 1279px) {
+  .favourite-picks{
+    margin: 72px 57px 0 56px;
+    overflow: hidden;
+  }
+  .favourite-picks__title{
+    width: 338px;
+    height: 48px;
+    font-weight: 700;
+    font-size: 35.16px;
+    line-height: 48px;
+    margin: 0;
+    letter-spacing: -0.04em;
+  }
+  .favourite-picks-container{
+    display: flex;
+    gap: 23px;
+    transition: transform 0.3s linear;
+  }
+  .pick-card{
+    width: 427px;
+    min-width: 427px;   /* Минимальная ширина */
+    max-width: 427px;
+    height: 447px;
+    margin-top: 32px;
+    border-radius: 8px;
+    gap: 16px;
+    background-color: #F9F9F9;
+  }
+  .pick_img{
+    width: 356px;
+    height: 240px;
+    border-top-left-radius: 8px;
+    border-top-right-radius: 8px;
+  }
+  .pick-card-content{
+    width: 356px;
+    height: 175px;
+    padding-right: 16px;
+    padding-bottom: 16px;
+    padding-left: 16px;
+    gap: 8px;
+    margin-top: 16px;
+  }
+  .pick-card-title{
+    text-decoration: none; /* Убираем подчеркивание */
+    color: inherit; /* Сохраняем цвет текста родительского элемента */
+    border: none; /* Убираем рамку */
+    cursor: pointer; /* Добавляем указатель мыши в виде руки для кликабельности */
+    text-align: center; /* Выравнивание текста по горизонтали */
+    height: 32px;
+    font-weight: 700;
+    font-size: 22.5px;
+    line-height: 32px;
+    letter-spacing: 0;
+    margin-bottom: 8px;
+    margin-top: 0;
+    display: flex;
+    align-items: center;
+  }
+  .pick-card-review{
+    display: flex;
+    height: 26px;
+    font-family: var(--font-Hind);
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 100%;
+    letter-spacing: 0;
+    color:#596F72;
+    margin-bottom: 8px;
+    margin-top: 0;
+  }
+  .review-text{
+    padding-top: 7px;
+    margin: 0;
+  }
+  .star{
+    width: 22px;
+    height: 22px;
+    padding-top: 3px;
+    padding-left: 2px;
+  }
+  .pick-card-description{
+    height: 29px;
+    font-family: var(--font-Hind);
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 100%;
+    letter-spacing: 0;
+    color: #4D4D4D;
+    margin: 0;
+    display: flex;
+    align-items: center;
+  }
+  .pick-card-category{
+    height: 48px;
+    padding-top: 16px;
+    gap: 10px;
+    margin: 0;
+    display: flex;
+    align-items: center;
+  }
+  .btn-category{
+    text-decoration: none; /* Убираем подчеркивание */
+    border: none; /* Убираем рамку */
+    cursor: pointer; /* Добавляем указатель мыши в виде руки для кликабельности */
+    text-align: center; /* Выравнивание текста по горизонтали */
+    width: 110px;
+    height: 32px;
+    font-family: var(--font-Hind);
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 32px;
+    letter-spacing: 0;
+    background-color: #E9E9E9;
+    color: #636363;
+    margin: 0;
+  }
+  .btn-right{
+    position: absolute;
+    width: 64px;
+    height: 64px;
+    z-index: 1;
+    background-color: #FFFFFF;
+    border-radius: 32px;
+    margin-top: -228px;
+    right:33px;
+  }
+  .btn-left{
+    position: absolute;
+    width: 64px;
+    height: 64px;
+    z-index: 1;
+    background-color: #FFFFFF;
+    border-radius: 32px;
+    margin-top: -228px;
+    left: 33px;
+  }
+  .AwardWinningBanner{
+    display: flex;
+    justify-items: center;
+    background-color: #E5F8BC;
+    padding-left: 56px;
+    padding-right: 57px;
+    margin-top: 63px;
+    overflow: hidden;
+  }
+  .banner-info{
+    font-weight: 900;
+    font-size: 43.95px;
+    line-height: 56px;
+    letter-spacing: -0.05em;
+    width: 539px;
+    height: 260px;
+    margin-top: 112px;
+  }
+  .banner-title{
+    margin: 0;
+  }
+  .banner-text{
+    font-weight: 700;
+    margin: 0;
+  }
+  .btn-banner{
+    display: inline-block;
+    text-decoration: none; /* Убираем подчеркивание */
+    border: none; /* Убираем рамку */
+    cursor: pointer; /* Добавляем указатель мыши в виде руки для кликабельности */
+    text-align: center; /* Выравнивание текста по горизонтали */
+    background-color: #202020;
+    color: #FFFFFF;
+    margin-top: 40px;
+    border-radius: 4px;
+    gap: 10px;
+    font-family: var(--font-Hind);
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 56px;
+    letter-spacing: 0;
+    width: 265px;
+    height: 56px;
+  }
+  .banner-mini-cards{
+    display: flex;
+    justify-items: center;
+    align-items: center;
+    width: 654px;
+    height: 964px;
+    margin-top: -239px;
+    margin-bottom: -238px;
+    margin-left: auto;
+    border-radius: 8px;
+  }
+  .banner-column-1{
+    display: flex;
+    flex-direction: column;
+    justify-items: center;
+    align-items: center;
+    width: 202px;
+    height: 964px;
+  }
+  .banner-column-2{
+    display: flex;
+    flex-direction: column;
+    justify-items: center;
+    align-items: center;
+    width: 202px;
+    height: 634px;
+    margin: 165px 24px;
+  }
+  .banner-card{
+    width: 202px;
+    height: 305px;
+    border-radius: 8px;
+    background-color: #F9F9F9;
+    margin: auto;
+  }
+  .banner-card-img{
+    margin: 8px;
+    width: 186px;
+    height: 220px;
+    border-radius: 8px;
+  }
+  .banner-card-title{
+    width: 135px;
+    height: 29px;
+    margin: 16px 34px;
+    font-family: var(--font-Hind);
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 100%;
+    letter-spacing: 0;
+    text-align: center;
+    color: #2C2C2C;
+  }
+  .new-arrivals{
+    margin-top: 70px;
+  }
+  .categories{
+    height: 272px;
+    margin: 63px 56px 0 56px;
+    overflow: hidden;
+  }
+  .categories-title{
+    width: 192px;
+    height: 43px;
+    margin: 0;
+    font-weight: 700;
+    font-size: 35.16px;
+    line-height: 100%;
+    letter-spacing: -0.02em;
+  }
+  .categories-container{
+    display: flex;
+    gap: 26px;
+    transition: transform 0.3s linear;
+    margin-top: 32px;
+  }
+  .categories-card{
+    width: 200px;
+    min-width: 200px;   /* Минимальная ширина */
+    max-width: 200px;
+    height: 197px;
+    border-radius: 8px;
+    background-color: #F9F9F9;
+    display: flex;
+    flex-direction: column;
+    justify-items: center;
+    align-items: center;
+  }
+  .categories-card-img{
+    width: 104px;
+    height: 104px;
+    margin-top: 24px;
+  }
+  .categories-card-title{
+    display: inline-block; /* Устанавливаем элемент как блочный */
+    text-decoration: none; /* Убираем подчеркивание */
+    border: none; /* Убираем рамку */
+    cursor: pointer; /* Добавляем указатель мыши в виде руки для кликабельности */
+    background-color: #F9F9F9;
+    font-family: var(--font-Hind);
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 100%;
+    letter-spacing: 0;
+    text-align: center;
+    color: #2C2C2C;
+    margin-top: 16px;
+  }
+  .btn-cat{
+    margin-top: -130px;
+  }
+  .all-categories{
+    position: absolute;
+    width: 194px;
+    height: 56px;
+    margin-top: -266px;
+    right: 35px;
+    border-radius: 4px;
+    background-color: #FFFFFF;
+    text-align: center;
+  }
+  .btn-all-categories{
+    display: inline-block; /* Устанавливаем элемент как блочный */
+    text-decoration: none; /* Убираем подчеркивание */
+    border: none; /* Убираем рамку */
+    cursor: pointer; /* Добавляем указатель мыши в виде руки для кликабельности */
+    text-align: center; /* Выравнивание текста по горизонтали */
+    width: 146px;
+    height: 29px;
+    background-color: #FFFFFF;
+    font-family: var(--font-Hind);
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 29px;
+    letter-spacing: 0;
+    color: #202020;
+    margin-top: 13.5px;
+  }
+}
+
+@media (max-width: 760px) {
+  .hungry{
+    height: 494px;
+  }
+  .hungry-title{
+    font-size: 39.06px;
+    line-height: 52px;
+  }
+  .Ladies{
+    display: none;
+  }
 }
