--- a/src/pages/restoran/section/dishname/style.css
+++ b/src/pages/restoran/section/dishname/style.css
@@ -41,7 +41,7 @@
     font-weight: 400;
     font-size: 18px;
     line-height: 100%;
-    letter-spacing: 0%;
+    letter-spacing: 0;
     margin-top: 8px;
     margin-left: 24px;
     color: #636871;
@@ -53,7 +53,7 @@
     font-weight: 400;
     font-size: 18px;
     line-height: 100%;
-    letter-spacing: 0%;
+    letter-spacing: 0;
     margin-top: 16px;
     margin-left: 24px;
     color: #202020;
@@ -102,3 +102,31 @@
     box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
 }
 
+@media (max-width: 470px) {
+    .dish-name{
+        width: 90%;
+        height: auto;
+        padding-bottom: 10px;
+    }
+    .dish-name-top-row {
+        display: flex;
+        flex-direction: column;
+        align-items: start;
+    }
+    .dish-quantity-controls {
+        margin-left: 24px;
+        margin-top: 10px;
+    }
+    .dish-name-title {
+        width: 90%;
+        height: auto;
+    }
+    .dish-name-description {
+        width: 90%;
+        height: auto;
+    }
+    .dish-name-price {
+        width: 90%;
+        height: auto;
+    }
+}
